kubernative-files/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pod
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - port: 8080
      targetPort: 8080
